<resources>
    <string name="app_name">Saveo Assignment</string>
    <string name="now_showing">Now Showing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_now">Book Now</string>
    <string name="movie_title">Movie Title</string>
    <string name="ratings">Ratings: 0.0</string>
    <string name="total_reviews">Total Review Count: 0</string>
    <string name="language">Language</string>
    <string name="release_date">Release Date</string>
    <string name="prev_page">Prev</string>
    <string name="next_page">Next</string>
    <string name="overview">Overview</string>
</resources>
